@@ -1,0 +1,15 @@
+<?xml version="1.0"?>
+<object name="portal_controlpanel"
+    xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+    i18n:domain="wise.content">
+  <configlet title="Redmine settings"
+             action_id="redmine-configuration"
+             appId="redmine-configuration"
+             category="Products"
+             condition_expr=""
+             url_expr="string:${portal_url}/@@redmine-settings"
+             visible="True"
+             i18n:attributes="title">
+    <permission>Manage portal</permission>
+  </configlet>
+</object>
