@@ -45,3 +45,13 @@ def upgrade_to_6(context):
     context.runImportStepFromProfile(default_profile, 'actions')
 
     logger.info("Upgrade finished.")
+
+
+def upgrade_to_7(context):
+    logger.info("Upgrading to 7")
+
+    # need to reimport wise.content, it has updated control panel settings
+    context.runImportStepFromProfile(default_profile, 'controlpanel')
+    context.runImportStepFromProfile(default_profile, 'propertiestool')
+
+    logger.info("Upgrade finished.")
