@@ -3,6 +3,8 @@ Changelog
 
 1.0dev (unreleased)
 ------------------
+* Feature: Added redmine configuration forms
+  [iulianpetchesi #86754]
 * Feature: Added link to folder in user actions
   [iulianpetchesi #86898]
 * Feature: Added new image content type + upgrade step + modifications
